--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
     "ffmpeg-static": "^4.4.0",
-    "slash-create": "^4.0.1"
+    "slash-create": "^4.0.1",
+    "ytdl-core": "^4.9.2"
   },
   "devDependencies": {
     "mdtable": "^0.3.1"
